# FreeCAD

.github/: pull_request_template.md
src/Mod/NeuMaterial/: CMakeLists.txt  Init.py  InitGui.py  neumaterial_tree.txt
src/Mod/NeuMaterial/App/: CMakeLists.txt  Material.cpp  Material.h  Material.pyi  MaterialIO.cpp  MaterialIO.h  MaterialModel.cpp  MaterialModel.h  MaterialPyImp.cpp  MaterialStore.cpp  MaterialStore.h  MaterialStore.pyi  MaterialValidator.cpp  MaterialValidator.h  ModelStore.h  ModelStore.pyi  ModelStorePyImp.cpp  NeuMaterialApp.cpp  NeuMaterialApp.h  PreCompiled.h
src/Mod/NeuMaterial/Gui/: CMakeLists.txt  NeuMaterialGui.cpp  NeuMaterialGui.h  PreCompiled.h  Workbench.cpp  Workbench.h
src/Mod/NeuMaterial/Gui/commands/: __init__.py  cmd_browse_library.py  cmd_delete_material.py  cmd_duplicate_material.py  cmd_edit_material.py  cmd_new_material.py
src/Mod/NeuMaterial/Gui/ui/: __init__.py  material_browser.py  material_editor.py  property_widgets.py
src/Mod/NeuMaterial/Resources/Material/Standard/Ceramic/: Alumina.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Glass/: Borosilicate.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Metal/Aluminum/: Aluminum6061.yaml  Aluminum7075.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Metal/Copper/: CopperPure.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Metal/Nickel/: Inconel625.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Metal/Steel/: StainlessSteel304.yaml  Steel1020.yaml  Steel4140.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Metal/Titanium/: TitaniumGrade5.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Polymer/Thermoplastic/: ABS.yaml  Nylon66.yaml  PLA.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Polymer/Thermoset/: EpoxyGeneral.yaml
src/Mod/NeuMaterial/Resources/Material/Standard/Wood/Hard/: OakWhite.yaml
src/Mod/NeuMaterial/Resources/Models/Appearance/: BasicRendering.yml  Color.yml  Metallic.yml  Opacity.yml  RenderAppearance.yml  Roughness.yml  TexturePath.yml
src/Mod/NeuMaterial/Resources/Models/Electrical/: Electrical.yml  ElectricalConductivity.yml  Permittivity.yml  Resistivity.yml
src/Mod/NeuMaterial/Resources/Models/Mechanical/: Density.yml  LinearElastic.yml  PoissonsRatio.yml  UltimateStrength.yml  YieldStrength.yml  YoungsModulus.yml
src/Mod/NeuMaterial/Resources/Models/Thermal/: MeltingPoint.yml  SpecificHeat.yml  Thermal.yml  ThermalConductivity.yml  ThermalExpansion.yml
src/Mod/NeuMaterial/tools/: combine_yaml.py  split_yaml.py
